create SessionHelper to use SetObjectAsJson

--- a/LootGame.csproj
+++ b/LootGame.csproj
@@ -5,6 +5,7 @@
     <UserSecretsId>4ffee093-84c7-4390-b28f-b936975f0330</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.6" />
     <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.6">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
